Continue account, wrap up history, start edit I wrapped up the account order history page, this is a very basic page, so i just added the styles required to put the table in a box and get everything looking like it fits in our theme. This wasn't too much trouble, just tedious as all of this is. I made a Back button, which i'm going to re-use. I've started the account "Edit Info" page, which is actually nearly done. I just have to get the password change box to fit nicely, but most of the styles are in there, and i made a custom save button. keeping with the theme. There have been some other random edits, and a couple database things. Primarily, there was a bunch of errors on the server due to the IP Blocking, but it was just cause of a comment. it was really weird, cause I couldn't find the issue. but i just removed it and re-added the IPs. I also found that one of paypal's IP's was being denied. and the server (our own) did not have access, which it should. So i fixed that. I'll need to do a database sync in the morning, but that should be fine. And update README.
Former-commit-id: 7252b7ab2afe7fa6bf2ecf9a0ba7d7dd8ce7be66

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -790,6 +790,7 @@ img, button, input {
         .opc-wrapper-opc #co-payment-form {
             padding-top: 20px;
             margin-bottom: 0px;
+            display: block;
         }
 
         .opc-wrapper-opc #co-payment-form fieldset {
@@ -1059,14 +1060,25 @@ img, button, input {
         padding: 10px 0 0;
     }
 
-    .my-account .dashboard .account-box
-    .account-box-button {
+    .my-account .buttons-set {
+        clear: left;
         float: right;
         margin: 10px 20px;
-        background: #8a6499 none center center no-repeat;
+    }
+
+    .my-account .account-sub-button {
+        margin: 0;
         text-indent: -10000px;
         width: 70px;
         height: 30px;
+    }
+
+    .my-account .back-link {
+        background: #8a6499 url('../images/account-buttons-back-link.png') center center no-repeat;
+    }
+
+    .my-account .save-button {
+        background: #8a6499 url('../images/account-buttons-save-button.png') center center no-repeat;
     }
 
     /* Login / Register Page Styles
@@ -1115,15 +1127,15 @@ img, button, input {
         padding: 10px;
     }
 
-    .my-account .dashboard .account-box
-    .box-title {
+    /*.my-account .dashboard*/
+    .account-box .box-title {
         border-bottom: 1px solid #e6e6e6;
         margin: 10px;
         padding-left: 20px;
     }
 
-    .my-account .dashboard .account-box
-    .box-title > *:first-child {
+    /*.my-account .dashboard */
+    .account-box .box-title > *:first-child {
         color: #444;
         font-family: "Tahoma";
         font-size: 18px;
@@ -1131,8 +1143,8 @@ img, button, input {
         display: inline-block;
     }
 
-    .my-account .dashboard .account-box
-    .box-title > *:first-child + a {
+    /*.my-account .dashboard*/
+    .account-box .box-title > *:first-child + a {
         float: right;
         color: #888;
         font-size: 16px;
@@ -1146,78 +1158,130 @@ img, button, input {
         letter-spacing: 0.0125em;
     }
 
-    .my-account .dashboard .account-box
-    .box-title > *:first-child + a:hover {
+    /*.my-account .dashboard*/
+    .account-box .box-title > *:first-child + a:hover {
         text-decoration: underline;
     }
 
-    #my-orders-table-wrap {
-        margin: 20px 35px 0px;
+    /*.my-account .dashboard*/
+    .account-box .account-box-button {
+        float: right;
+        margin: 10px 20px;
+        background: #8a6499 none center center no-repeat;
+        text-indent: -10000px;
+        width: 70px;
+        height: 30px;
     }
 
-    #my-orders-table {
-        width: 600px;
-        margin: 5px;
-        background: #FFF;
-    }
+        /* Account Dashboard Recent Orders Section
+        *********************************************************/
 
-    #my-orders-table tr th {
-        font-weight: bold;
+        #my-orders-table-wrap {
+            margin: 20px 35px 0px;
+        }
+
+        #my-orders-table {
+            width: 600px;
+            margin: 5px;
+            background: #FFF;
+        }
+
+        #my-orders-table tr th {
+            font-weight: bold;
+            margin: 0;
+        }
+
+        #my-orders-table tr th,
+        #my-orders-table tr td {
+            padding: 10px;
+            vertical-align: middle;
+            text-align: center;
+            border-bottom: 1px solid #e6e6e6;
+            border-right: 1px solid #e6e6e6;
+        }
+
+        #my-orders-table tr th:last-child,
+        #my-orders-table tr td:last-child {
+            border-right: none;
+        }
+
+        #my-orders-table td a {
+            text-decoration: none;
+        }
+
+        #my-orders-table td a:hover {
+            text-decoration: underline;
+        }
+
+        #recent-orders-view-all {
+            background-image: url('../images/account-dashboard-recent-orders-view-all.png');
+            width: 70px;
+            margin-right: 40px;
+        }
+
+        /* Dashboard Account Information Section
+        *******************************************************************/
+        .my-account .dashboard .account-box.box-info
+            .account-box.column,
+        .my-account .dashboard .account-box.box-info
+            .account-box.column .account-box-inner {
+            min-height: 130px;
+        }
+
+        #account-info-edit-password {
+            width: 140px;
+            background-image: url('../images/account-dashboard-button-edit-password.png');
+        }
+
+        /* Dashboard Account Addresses Section
+        *********************************************************************/
+        .my-account .dashboard .account-box.box-address
+        .account-box.column,
+        .my-account .dashboard .account-box.box-address
+        .account-box.column .account-box-inner {
+            min-height: 235px;
+        }
+
+        #account-info-edit-addresses {
+            width: 140px;
+            background-image: url('../images/account-dashboard-button-edit-addresses.png');
+        }
+
+    /* Account Order History Page
+    ***************************************************************************************/
+    .orders-history #my-orders-table {
+        width: 870px;
         margin: 0;
     }
 
-    #my-orders-table tr th,
-    #my-orders-table tr td {
-        padding: 10px;
-        vertical-align: middle;
-        text-align: center;
-        border-bottom: 1px solid #e6e6e6;
-        border-right: 1px solid #e6e6e6;
+    .orders-history .pager {
+        margin-right: 10px;
     }
 
-    #my-orders-table tr th:last-child,
-    #my-orders-table tr td:last-child {
-        border-right: none;
+    .orders-history .pager:before,
+    .orders-history .pager:after { content: "\00D\00A"; display: block; height: 0; clear: both; visibility: hidden; width: 0; overflow: hidden; }
+
+    .orders-history .pager * {
+        display: inline-block;
+        margin: 0;
     }
 
-    #my-orders-table td a {
-        text-decoration: none;
+    .orders-history .pager > *{
+        float: right;
+        margin-right: 10px;
     }
 
-    #my-orders-table td a:hover {
-        text-decoration: underline;
+    .orders-history .pager select {
+        width: auto;
     }
 
-    #recent-orders-view-all {
-        background-image: url('../images/account-dashboard-recent-orders-view-all.png');
-        width: 70px;
-        margin-right: 40px;
+    /* Account Edit Info Page
+    *****************************************************/
+    .my-account .account-box.col-2 {
+        float: right;
     }
 
-    /* Dashboard Account Information Section
-    *******************************************************************/
-    .my-account .dashboard .account-box.box-info
-        .account-box.column,
-    .my-account .dashboard .account-box.box-info
-        .account-box.column .account-box-inner {
-        min-height: 130px;
-    }
-
-    #account-info-edit-password {
-        width: 140px;
-        background-image: url('../images/account-dashboard-button-edit-password.png');
-    }
-
-    /* Dashboard Account Addresses Section
-    *********************************************************************/
-    .my-account .dashboard .account-box.box-address
-    .account-box.column,
-    .my-account .dashboard .account-box.box-address
-    .account-box.column .account-box-inner {
-        min-height: 235px;
-    }
-
-    #account-info-edit-addresses {
-        width: 140px;
-        background-image: url('../images/account-dashboard-button-edit-addresses.png');
+    .my-account .account-box.col-2.displaynone +
+    .account-box.col-1 {
+        width: 96% !important;
     }
